@@ -130,8 +130,8 @@
 	[sharedFileUtils setMacSuffix:@"-ipad"];
 	[sharedFileUtils setEnableFallbackSuffixes:YES];		// Default: NO. No fallback suffixes are going to be used
 	
-	[director_ setResizeMode:kCCDirectorResize_AutoScale];
-//	[director_ setResizeMode:kCCDirectorResize_NoScale];
+//	[director_ setResizeMode:kCCDirectorResize_AutoScale];
+	[director_ setResizeMode:kCCDirectorResize_NoScale];
 
 	[self run];
 }
